Add optional API server and persistence

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "conductor-llm"
-version = "1.3.0"
-description = "LLM Control Plane for intelligent model routing"
+version = "2.1.0"
+description = "Save money on LLM calls. Automatically picks cheap vs expensive models."
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
 authors = [
     {name = "Rana Muhammad Usman", email = "ranausman@outlook.com"}
 ]
-keywords = ["llm", "routing", "cost-optimization", "latency", "machine-learning"]
+keywords = ["llm", "openai", "gpt", "cost-optimization", "ai"]
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
@@ -27,22 +27,17 @@ dependencies = []
 
 [project.optional-dependencies]
 openai = ["openai>=1.0.0"]
-anthropic = ["anthropic>=0.18.0"]
-all = ["openai>=1.0.0", "anthropic>=0.18.0"]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.0.0",
 ]
-
-[project.scripts]
-conductor = "conductor.cli:main"
+api = [
+    "fastapi>=0.110.0",
+    "uvicorn>=0.24.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/ranausmans/conductor"
-Documentation = "https://github.com/ranausmans/conductor#readme"
 Repository = "https://github.com/ranausmans/conductor"
 
 [tool.setuptools.packages.find]
@@ -54,18 +49,3 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
-
-[tool.black]
-line-length = 100
-target-version = ["py310", "py311", "py312"]
-
-[tool.ruff]
-line-length = 100
-select = ["E", "F", "I", "N", "W"]
-ignore = ["E501"]
-
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-ignore_missing_imports = true
